--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
       </div>
 
-      <div id="input" style="text-transform: uppercase; position: relative;">
+      <div id="input">
          <input id="command" type="text" />
          <div id="input-display"></div>
          >
