Dynamic actions and help

--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,7 @@
    </div>
    <div class="sidebar">
       <div class="header">Commands</div>
-      <ul class="commands">
-         <li>Help</li>
-         <li>Status</li>
-         <li>Fight</li>
-         <li>Use (move)</li>
-         <li>Forefeit</li>
-         <li>Equip (item)</li>
-         <li>Items</li>
-         <li>Moves</li>
+      <ul id="commands">
       </ul>
    </div>
 
