Update for laptop

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       <div class="header">Commands</div>
       <ul id="commands">
       </ul>
+
+      <div id="autotype-container">
+         <h4>Autotype</h4>
+         <input id="autotype" type="text" />
+      </div>
    </div>
 
    <script src="/bundle.js"></script>
